alpha
- Mayhem
  Added touch and multi-touch support for dragging windows.
  The Thread Updater will pause when offline, and resume when online.
  Recursive Hiding will be automatically applied when manually hiding a post.
  Fix Chrome's install warning that 4chan X would execute on all domains.
  Fix Quote Backlinks not affecting inlined quotes.
  Fix Quote Highlighting not affecting inlined quotes.

master
- Mayhem
  Add /po/ archive redirection for threads, images and post resurrection.

2.37.3
- Mayhem
  Fix successful posting causing errors.
  Fix 4chan X trying to interact with >>>/board/rules links.

2.37.2
- aeosynth
  Beep on new post to completely read thread
- Mayhem
  Fix dead quotes.

2.37.1
- noface
  Fix Anonymize not working on stubs.
- Mayhem
  Fix selection quoting on Opera.
  Fix history bug with Persistent QR enabled on Chrome.
  Fix posting warning not displaying the reason.
  Fix deadquotes showing up in code-tags.

2.37.0
- noface
  Add Catalog Links toggle.
  Fix Anonymize not working on hovered posts.
- Mayhem
  Added catalog support.
  Sync thread hiding between index and catalog.
  Add /c/ archived thread and image redirection.

2.36.3
- Mayhem
  Fix next/previous page keybinds.

2.36.2
- noface
  Add tags support on /f/.
- Mayhem
  Add /mu/ archived image redirection.

2.36.1
- noface
  The Menu now has search links for Archivers.
- Mayhem
  Added possibility to display unix timestamps with File Info Formatting.

2.36.0
- Mayhem
  Added thread creation QR cooldown.
  Fix QR cooldown timer between non-sage and sage posts. You can submit a non-sage post 30 seconds after a sage one.
  Fix /q/ QR cooldowns for image and sage posts.

2.35.4
- Mayhem
  Removed the obnoxious 4chan Pass ad in captcha errors when posting.
  Fix 'Administrator/Moderator/Developer Replies' creating extra backlinks on /q/, again.

2.35.3
- Mayhem
  Larger Comment text input by default for 4chan Pass users and on /f/ (no captcha).

2.35.2
- Mayhem